<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Time Statistic Lite</string>
    <string name="action_settings">Settings</string>
    <string name="last_value">Last value</string>
    <string name="add_counter_dialog">Add new counter</string>
    <string name="edit_counter_dialog">Edit counter</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="reset_all">Reset all counters</string>
    <string name="are_you_sure">You are sure?</string>

    <string-array name="TitlePages">
        <item>Counters</item>
        <item>Notes</item>
        <item>Diagrama</item>
        <item>Diary</item>
    </string-array>

    <string name="del">Delete</string>
    <string name="day1">day</string>
    <string name="day234">day</string>
    <string name="days">days</string>
    <string name="change_color">Select color for background</string>
    <string name="version">version</string>
    <string name="about_text">Idea: <a href="mailto:ruslan.popov@gmail.com">Ruslan Popov</a>\n\nLaunch icon design: Sergey Barkov (superbarok)\n\nMenu icon design: Anna Bartosh\n\nDeveloper: <a href="mailto:mksmbtrsh@gmail.com">Maksim Bartosh</a>\n\nOther my apps on <a href="https://play.google.com/store/search?q=maksim+bartosh&amp;c=apps">GooglePlay</a>\n\n<a href="mailto:mksmbtrsh@gmail.com">Send me report</a></string>
    <string name="start_time">Start</string>
    <string name="end_time">Stop</string>
    <string name="name">Name</string>
    <string name="lenght">All</string>
    <string name="visible_notif">Icon in tray</string>
    <string name="alarm_notif">Alarm</string>
    <string name="alarm_notif_mode">device will alert you</string>
    <string name="alarm_notif_umode">you are sure of the time and switch counters</string>
    <string name="Import">Import</string>
    <string name="Export">Export</string>
    <string name="exim">Export, import and Backup</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <string name="cant_read_folder">Cant open a folder!</string>

    <color name="gray">#ffff0000</color>

    <string name="location">Path</string>
    <string name="importok">Import finished successful</string>
    <string name="exportok">Export finished successful</string>
    <string name="exportfail">Error export</string>
    <string name="notif">Alert about activity!</string>
    <string name="edit">Edit</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="current">Current record</string>
    <string name="before">Before record</string>
    <string name="after">Next record</string>
    <string name="less_min">Less start data of record</string>
    <string name="more_max">More stop data of record</string>
    <string name="now">Now</string>
    <string name="interval">Interval</string>
    <string name="interval_alarm">Interval alarm</string>
    <string name="help">Help</string>
    <string name="union">Union</string>
    <string name="filterdateset">Filter</string>

    <string-array name="StartFilters">
        <item>Since today</item>
        <item>Since yesterday</item>
        <item>since week</item>
        <item>since month</item>
        <item>since year</item>
        <item>since app setup</item>
        <item>since</item>
    </string-array>
    <string-array name="EndFilters">
        <item>to tommorow</item>
        <item>to begin this day</item>
        <item>to end this week</item>
        <item>to end this month</item>
        <item>to end this year</item>
        <item>not set</item>
        <item>to</item>
    </string-array>

    <string name="start">Since</string>
    <string name="note">Note</string>
    <string name="search">Search</string>

    <dimen name="fragment_border">4dp</dimen>

    <string name="h">h</string>
    <string name="m">m</string>
    <string name="end">end</string>
    <string name="future">future</string>
    <string name="not_found_diary">Not found diary notes</string>
    <string name="not_found_records">Not found time records</string>
    <string name="periods">Periods</string>

    <string-array name="periods">
        <item>hour</item>
        <item>day</item>
        <item>week</item>
        <item>12 hours</item>
    </string-array>

    <string name="upload_to_gdrive">Upload to google drive</string>
    <string name="uploadtogdriveok">Database timestatistic successfully saved to Google Drive</string>
    <string name="erroruploadtogdriveok">Error upload timestatistic database to Google Drive</string>
    <string name="export_to_gcalendar">Export to Google Calendar</string>
    <string name="select_counters">Select counters</string>
    <string name="select_gcalendar">Select Google Calendar</string>
    <string name="choise_gcalendar">Choise Google Calendar</string>
    <string name="export_notes">Export with notes</string>
    <string name="local_exim">Backup</string>
    <string name="one_record_export">Only one record export to Google calendar in lite version TimeStatistic. Please setup TimeStatisticPro for this fealture!</string>
    <string name="export_only_diary">Export only diary</string>
    <string name="export_to_csv">Export to CSV-file</string>
    <string name="select_path">Select path</string>
    <string name="error_cr_file">Create file error</string>
    <string name="error_open_file">Open file error</string>
    <string name="error_write_file">Write file error</string>
    <string name="error_close_file">Close file error</string>
    <string name="split_char">CSV split field char</string>
    <string name="header">Include header</string>
    <string name="datetime_format"><a href="http://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html">Format datetime in file</a></string>
    <string name="datetime_format_hint">Empty is miliseconds from January 1, 1970 UTC</string>
    <string name="error_dateformat">Date format error!</string>
    <string name="csv_file_name">Filename</string>
    <string name="csv_include_datetime">Filename include datetime (yyyyMMdd)</string>
    <string name="stop">Stop it!</string>
    <string name="export_to_csv_complete">Export to CSV-file complete!</string>
    <string name="filename">Filename</string>
    <string name="share_diagram">Share diagram is enable in TimeStatisticPRO version. Please setup TimeStatisticPro for this fealture!</string>
    <string name="vibro_notif_mode">On. off-mode is enable in PRO-verion.</string>
    <string name="vibro_notif">Vibration</string>

    <string-array name="AboutPages">
        <item>About program</item>
        <item>Version history</item>
    </string-array>

    <string name="since">Since</string>
    <string name="alerttime">Alert time</string>
    <string name="sum_since">Summary since</string>
    <string name="switchtime">Last switch</string>
	<string name="total">Total</string>
	<string name="c_widget">Counters widget</string>
	<string name="background">Background</string>
	<string name="transparent">Transparent background</string>
	<string name="example">Example</string>
	<string name="font_size">Font size</string>
	<string name="switch_counter">Switch on/off</string>
	<string name="on">on</string>
	<string name="off">off</string>
	<string name="counter_widget_err">Error! Zähler wurde gelöscht!</string>
	<string name="export_to_gcalendar_complite">Export to Google calendar complete!</string>
</resources>