<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_status_bar"
        android:key="visible_notif"
        android:title="@string/visible_notif" />
    <CheckBoxPreference
        android:icon="@drawable/ic_setalarm"
        android:key="alarm"
        android:summaryOff="@string/alarm_notif_umode"
        android:summaryOn="@string/alarm_notif_mode"
        android:title="@string/alarm_notif" />

    <PreferenceScreen
        android:icon="@drawable/db"
        android:title="@string/exim" >
        <Preference
            android:icon="@drawable/ic_export_db"
            android:key="export"
            android:title="@string/Export" />
        <Preference
            android:icon="@drawable/ic_import_db"
            android:key="import"
            android:title="@string/Import" />
        <Preference
            android:icon="@drawable/ic_google_drive"
            android:key="google_drive"
            android:title="@string/upload_to_gdrive" />
    </PreferenceScreen>

</PreferenceScreen>