<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_add"
        android:icon="@drawable/ic_action_add_dark"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/add">
    </item>
    <item
        android:id="@+id/item_reset_all"
        android:icon="@drawable/ic_action_reset_all_dark"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/reset_all">
    </item>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/abs__ic_menu_moreoverflow_holo_light"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/item_help"
        android:icon="@drawable/ic_action_about_light"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/help">
    </item>
    <item
        android:id="@+id/item_about"
        android:icon="@drawable/ic_action_about_light"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/about">
    </item>
    

</menu>