<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="18dp"
    android:orientation="horizontal" >
    <TextView
        android:id="@+id/name"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="left"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="4dip"
        android:layout_marginBottom="4dip"
        android:layout_marginRight="4dip"
        android:text="@string/name"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_margin="4dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/start_time"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/stop"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_margin="4dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/end_time"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lenght"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_margin="4dip"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/lenght"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:verticalSpacing="2dp"
        tools:listitem="@android:layout/simple_list_item_2" >

    </ListView>

    <LinearLayout
        android:id="@+id/union_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/union" />
    </LinearLayout>

</LinearLayout>