<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center" >

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/before_record"
            android:layout_width="16dip"
            android:layout_height="16dip"
            android:orientation="horizontal" >
        </LinearLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="left"
            android:text="@string/name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start_time"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stop"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/end_time"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lenght"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/lenght"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:clickable="false" />

    <ImageView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_note" 
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>

</RelativeLayout>